# gigaam-openai-api-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  README_ru.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/specs/: 00-master.md  01-scaffolding.md  02-engine-short-audio.md  03-longform-vad.md  04-openai-api.md  05-sse-streaming.md  06-docker-deploy.md  07-cpu-optimization.md  README.md
docs/superpowers/specs/: 2026-06-04-github-actions-ci-design.md
gigaam_api/: __init__.py  audio.py  auth.py  config.py  download_weights.py  errors.py  logging_setup.py  main.py  runner.py  schemas.py  streaming.py
gigaam_api/api/: health.py  models.py  transcriptions.py
gigaam_api/asr/: __init__.py  engine.py  formats.py  gigaam_engine.py  vad.py
tests/: conftest.py
tests/integration/: __init__.py  test_engine_real.py  test_longform_real.py  test_short_then_long_real.py  test_stream_real.py
tests/unit/: test_audio.py  test_auth.py  test_config.py  test_engine_longform.py  test_engine_short.py  test_errors.py  test_formats.py  test_health.py  test_lifespan.py  test_logging_setup.py  test_models_api.py  test_runner.py  test_schemas.py  test_streaming.py  test_transcriptions_api.py  test_vad_chunking.py  test_vad_silero.py
