[project]
name = "gigaam-api"
version = "0.1.0"
description = "OpenAI-compatible Russian-speech recognition service built on GigaAM"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "torch>=2.6",
    "torchaudio>=2.6",
    "silero-vad>=6.2.1",
    "gigaam",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gigaam_api"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Project convention: comments, docstrings, and developer-facing strings are in English.
# RUF001/002/003 (ambiguous-unicode) are enforced to catch accidental Cyrillic look-alikes.

[tool.ruff.format]
# Default ruff formatter settings.

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

# gigaam (a git dependency) and silero-vad ship no type stubs / py.typed.
# A targeted ignore_missing_imports is more idiomatic than a broad `# type: ignore`.
[[tool.mypy.overrides]]
module = ["gigaam.*", "silero_vad.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires a real model and/or network"]
addopts = "-q --strict-markers"

[tool.uv.sources]
gigaam = { git = "https://github.com/salute-developers/GigaAM.git", rev = "6e4b027c6fb554e09e8b9059b757a175295ab879" }
# torch/torchaudio: on Linux (Docker) — CPU wheels from the PyTorch index (no CUDA);
# on macOS (dev) — default PyPI wheels (with MPS). A single uv.lock covers both platforms
# via the platform marker. See the ADR log in CLAUDE.md.
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

# explicit = true → the index is used ONLY for torch/torchaudio (via the sources above);
# all other packages (onnxruntime etc. pulled by gigaam) come from regular PyPI.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
